2010-06-13  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Normalize whitespaces in 'tests/Makefile.am'.
	* tests/Makefile.am (TESTS): Use only spaces, not tabs, in the
	definition of this variable.

2010-06-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Remove a couple of unneeded conditionals from tests.
	* tests/pr243.test, tests/pr266.test, tests/strip.test: No need
	for the FOOTEST conditional.

2010-06-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Modernize, improve and/or fix various test scripts.
	* tests/symlink3.test: Deleted, separated into two new, more
	complete tests ...
	* tests/forcemiss.test: ... this one ...
	* tests/forcemiss2.test: ... and this one.
	* tests/symlink2.test: Enable `errexit' shell flag, make test
	stricter, and skip it if symlink creation is not supported.
	* tests/postproc.test: Enable `errexit' shell flag, related
	changes, and a couple of unrelated cosmetic changes.
	* tests/recurs.test: Use the `configure.in' stub created by
	`./defs', rather than writing one from scratch.  Make grepping
	of Automake stderr slighty stricter.
	* tests/substtarg.test: Likewise.
	* tests/strip.test: Likewise, and move the call to `set -e'
	earlier (just after the inclusion of `./defs').	Also, make sure
	that the script installed by `make install-script' is equal to
	the original one.
	* tests/substref.test: Use the `configure.in' stub created by
	`./defs', rather than writing one from scratch.  Move the call
	to `set -e' earlier (just after the inclusion of `./defs').
	Avoid to explicitly export CC for configure (that's already done
	in ./defs).  Avoid potential problems with unpredictable make
	output.  Finally, make grepping of Makefile.in stricter.
	* tests/substre2.test: Ensure verbose printing of the captured
	make's output, and make its grepping slighty stricter.
	* tests/cygwin32.test: Enable `errexit' shell flag, and related
	changes.  Also, do not create useless dummy source/data files.
	* tests/scripts.test: Likewise.