@@ -1,5 +1,6 @@
 #! /bin/sh
-# Copyright (C) 1996, 2001, 2002, 2007, 2008  Free Software Foundation, Inc.
+# Copyright (C) 1996, 2001, 2002, 2007, 2008, 2010 Free Software
+# Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -16,6 +17,8 @@
 
 # Test to make sure obsolete macros can be autoupdated.
 
+# We need the following indirection in case someone exported e.g.
+# AUTOUPDATE='autoupdate --verbose'.
 set x ${AUTOUPDATE-autoupdate}
 required=$2
 . ./defs || Exit 1
