@@ -1,5 +1,9 @@
 2010-06-13  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Add useful comment in test script obsolete.test.
+	* tests/obsolte.test: Add a comment explaining why we need
+	an indirection in adding $AUTOUPDATE to $required.
+
 	Normalize whitespaces in 'tests/Makefile.am'.
 	* tests/Makefile.am (TESTS): Use only spaces, not tabs, in the
 	definition of this variable.
